# s_terminal

./: .gitignore  README.md  README_CN.md
backend/: Cargo.toml
backend/src/: main.rs  message.rs  ssh.rs  ws_handler.rs
docs/superpowers/plans/: 2026-03-31-super-terminal-implementation-plan.md
docs/superpowers/specs/: 2026-03-31-super-terminal-design.md
frontend/: index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx  index.css
frontend/src/components/: SessionForm.tsx  SessionManager.tsx  TabBar.tsx  Terminal.tsx
frontend/src/hooks/: useSessions.ts  useWebSocket.ts
frontend/src/types/: session.ts
