[package]
name = "s_terminal"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["full"] }
tokio-tungstenite = "0.21"
futures-util = "0.3"
ssh2 = "0.9"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
log = "0.4"
env_logger = "0.11"
parking_lot = "0.12"
uuid = { version = "1", features = ["v4"] }
percent-encoding = "2"
